# RacketPro

./: .gitignore  .tool-versions  CLAUDE.md  LICENSE  README.md  TODO.md
LLM_STATE/racketpro/: backlog.md  backlog.yaml  plan.md  prompt-reflect.md  prompt-triage.md  prompt-work.md  run.sh
docs/plans/: 2026-03-04-mrracket-design.md  2026-03-04-phase1-bridge.md  2026-03-04-phase2-editor-repl-design.md  2026-03-04-phase2-implementation.md  2026-03-05-e2e-testing-design.md  2026-03-05-phase3-implementation.md  2026-03-05-phase3-language-intelligence-design.md  2026-03-05-phase4-implementation.md  2026-03-05-phase4-usability-stepper-design.md  2026-03-07-phase-b-implementation.md  2026-03-07-phase-b-macro-debugger-design.md  2026-03-07-quick-wins-macro-expander-design.md  2026-03-07-quick-wins-macro-expander-impl.md  (+7 more)
extensions/: calc-lang.rkt  counter-ui.rkt  counter.rkt  file-watcher.rkt  hello-component.rkt  timer-extend.rkt
frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: bridge.rs  debug.rs  fs.rs  lib.rs  main.rs  pty.rs  search.rs  settings.rs
test/: test-bridge.rkt  test-component.rkt  test-e2e.rkt  test-extend-lang.rkt  test-extension.rkt  test-keybindings.rkt  test-lang-intel.rkt  test-macro-expander.rkt  test-pattern-extractor.rkt  test-phase2.rkt  test-phase4.rkt  test-phase5b-integration.rkt  test-project.rkt  test-rhombus.rkt  test-settings.rkt  test-stepper.rkt  test-theme.rkt  test-ui.rkt
website/: index.md  meta.yml
(+82 files in other folders)
